--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="accessoir.css">
   <title>Cup of Tea</title>
 </head>
 
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
-          <img src="img/logo.png" alt="">
+          <img src="../img/logo.png" alt="">
         </div>
         <div class="head-price">
           <p>Mon panier "£" 42.00€</p>
