--- a/Acceuil/index.html
+++ b/Acceuil/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
-          <img src="img/logo.png" alt="">
+          <img src="../img/logo.png" alt="">
         </div>
         <div class="head-price">
           <p>Mon panier "£" 42.00€</p>
@@ -39,7 +39,7 @@
     <section class="equipe">
       <h1>Notre équipe</h1>
       <h3>Amélie, fondatrice de Cup of Tea</h3>
-      <img src="img/amelie.jpg" class="img1" alt="">
+      <img src="../img/amelie.jpg" class="img1" alt="">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
         molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
         Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
@@ -68,7 +68,7 @@
         repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
       </p>
       <h3>Xavier, fondateur de Cup of Tea</h3>
-      <img src="img/xavier.jpg" class="img2" alt="">
+      <img src="../img/xavier.jpg" class="img2" alt="">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
         molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
         Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
@@ -107,7 +107,7 @@
       </p>
         <div class="flex-concept">
           <div>
-            <img src="img/concept/1.svg" alt="">
+            <img src="../img/concept/1.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
@@ -115,7 +115,7 @@
             </p>
           </div>
           <div>
-            <img src="img/concept/2.svg" alt="">
+            <img src="../img/concept/2.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
@@ -123,7 +123,7 @@
             </p>
           </div>
           <div>
-            <img src="img/concept/3.svg" alt="">
+            <img src="../img/concept/3.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
