--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -36,85 +36,93 @@
     </div>
   </header>
   <main class="container">
+    <section class="offret">
+      <h1>C'est noel, profitez-en ! </h1>
+      <div class="content-offret">
+        <img src="../img/offre-noel.jpg" width="100%" alt="">
+      </div>
+      <div class="slide-offret">
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
+      </div>
+    </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
+    <section class="chose-the">
+      <h1>Choisissez votre the</h1>
+      <div class="chose-the-flex">
+        <a href="#">
+          <img src="../img/tea/1.jpg" alt="Tasse de thé noir" />
+          <h3>Thé noir</h3>
+        </a>
+        <a href="#">
+          <img src="../img/tea/2.jpg" alt="Tasse de thé vert" />
+          <h3>Thé vert</h3>
+        </a>
+        <a href="#">
+          <img src="../img/tea/3.jpg" alt="Tasse de oolong" />
+          <h3>Oolong</h3>
+        </a>
+        <a href="#">
+          <img src="../img/tea/4.jpg" alt="Tasse de thé blanc" />
+          <h3>Thé blanc</h3>
+        </a>
+        <a href="#">
+          <img src="../img/tea/5.jpg" alt="Tasse de rooibos" />
+          <h3>Rooibos</h3>
+        </a>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-    </div>
-    <div>
+    </section>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-        debitis iusto. Temporibus maxime aspernatur dolor aliquid
-        iure magnam, autem esse molestiae fuga nihil optio?
-      </p>
+    <section class="detail-the">
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-        debitis iusto. Temporibus maxime aspernatur dolor aliquid
-        iure magnam, autem esse molestiae fuga nihil optio?
-      </p>
+      <div class="detail-the-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product11_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product15_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
+
+
+    </section>
   </main>
 
   <footer class="footer">
