--- a/The/the.html
+++ b/The/the.html
@@ -36,84 +36,232 @@
     </div>
   </header>
   <main class="container">
+    <section class="container-element">
+      <div class="element-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
+      <div class="element-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
+      <div class="element-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
+      <div class="element-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-
+      <div class="element-flex">
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+        <div>
+          <h1>Notre nouveauté</h1>
+          <a href="#">
+            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+          </a>
+          <h3>Thé de hammam</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+            expedita exercitationem ut iste assumenda in blanditiis
+            sit nisi, perferendis suscipit hic,
+          </p>
+          <h5>A partir de </h5>
+          <h4>8.50€</h4>
+          <button>VOIR CE PRODUIT</button>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
