--- a/Acceuil/index.html
+++ b/Acceuil/index.html
@@ -36,75 +36,80 @@
     </div>
   </header>
   <main class="container">
-    <section class="equipe">
-      <h1>Notre équipe</h1>
-      <h3>Amélie, fondatrice de Cup of Tea</h3>
-      <img src="../img/amelie.jpg" class="img1" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-        molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-        Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-        quibusdam
-        hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-        id
-        quos.
-        Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-        perferendis
-        consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-        Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-        soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-        Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-        eveniet,
-        quibusdam
-        hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-        id
-        quos.
-        Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-        perferendis
-        consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-        Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-        soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-        Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-        eveniet,
-        repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-      </p>
-      <h3>Xavier, fondateur de Cup of Tea</h3>
-      <img src="../img/xavier.jpg" class="img2" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-        molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-        Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-        quibusdam
-        hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-        id
-        quos.
-        Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-        perferendis
-        consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-        Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-        soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-        Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-        eveniet,
-        repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-      </p>
-    </section>
+    <div class="container-color">
+      <section class="equipe">
+        <h1>Notre équipe</h1>
+        <h3>Amélie, fondatrice de Cup of Tea</h3>
+        <img src="../img/amelie.jpg" class="img1" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
+          molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
+          Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
+          quibusdam
+          hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
+          id
+          quos.
+          Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
+          perferendis
+          consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
+          Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
+          aspernatur
+          soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
+          Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
+          eveniet,
+          quibusdam
+          hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
+          id
+          quos.
+          Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
+          perferendis
+          consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
+          Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
+          aspernatur
+          soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
+          Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
+          eveniet,
+          repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
+        </p>
+        <h3>Xavier, fondateur de Cup of Tea</h3>
+        <img src="../img/xavier.jpg" class="img2" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
+          molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
+          Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
+          quibusdam
+          hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
+          id
+          quos.
+          Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
+          perferendis
+          consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
+          Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
+          aspernatur
+          soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
+          Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
+          eveniet,
+          repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
+        </p>
+      </section>
 
-    <section class="concept">
-      <h1>Notre concept</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-        molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-        Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-        quibusdam
-        hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-        id
-        quos.
-        Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-        perferendis
-        consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-        Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-        soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-        Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-        eveniet,
-        repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-      </p>
+      <section class="concept">
+        <h1>Notre concept</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
+          molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
+          Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
+          quibusdam
+          hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
+          id
+          quos.
+          Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
+          perferendis
+          consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
+          Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
+          aspernatur
+          soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
+          Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
+          eveniet,
+          repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
+        </p>
         <div class="flex-concept">
           <div>
             <img src="../img/concept/1.svg" alt="">
@@ -131,8 +136,9 @@
             </p>
           </div>
         </div>
-      
-    </section>
+
+      </section>
+    </div>
   </main>
 
   <footer class="footer">
