integration et mise en forme

--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -42,7 +42,16 @@
         <img src="../img/offre-noel.jpg" width="100%" alt="">
       </div>
       <div class="slide-offret">
+        <div class="points">
+          <label for="slide-dot-1"></label>
+          <label for="slide-dot-2"></label>
+        </div>
 
+        <input class="slide-input" id="slide-dot-1" type="radio" name="slides" checked>
+        <img class="slide-img" src="../img/slider/1.jpg"  alt="">
+
+        <input class="slide-input" id="slide-dot-2" type="radio" name="slides">
+        <img class="slide-img" src="../img/slider/2.jpg"  alt="">
       </div>
     </section>
 
