--- a/GrandCrus/grandcrus.html
+++ b/GrandCrus/grandcrus.html
@@ -36,6 +36,31 @@
     </div>
   </header>
   <main class="container">
+    <div class="flex-head">
+      <div>
+        <h2>Blue of London</h2>
+        <h5>Thé noir à la bergamote</h5>
+        <p>Ref: 133742</p>
+      </div>
+      <div>
+        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-coffee" aria-hidden="true"></i>
+      </div>
+    </div>
+
+    <div class="flex-body">
+      <div>
+        <img src="../img/product/product1.jpg" width="100%" alt="">
+      </div>
+      <div>
+        <input type="number" placeholder="Pochette de 100gr">
+        <h1>9,00€</h1>
+        <button>AJOUTER AU PANIER</button>
+        <i class="fa fa-coffee" aria-hidden="true">Ajouter à ma liste d'envie</i>
+      </div>
+    </div>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
       molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
@@ -63,9 +88,9 @@
       Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
       eveniet,
       repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
       molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
       Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
       quibusdam
@@ -82,39 +107,9 @@
       repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
     </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-    </p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
-      debitis iusto. Temporibus maxime aspernatur dolor aliquid
-      iure magnam, autem esse molestiae fuga nihil optio?
-    </p>
-
+    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g elit. </h6>
+    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g elit. Corrupti quod consequuntur placeat, iusto, </h6>
+  
   </main>
 
   <footer class="footer">
