--- a/GrandCrus/grandcrus.html
+++ b/GrandCrus/grandcrus.html
@@ -47,6 +47,7 @@
         <i class="fa fa-coffee" aria-hidden="true"></i>
         <i class="fa fa-coffee" aria-hidden="true"></i>
         <i class="fa fa-coffee" aria-hidden="true"></i>
+        <p>Avoir plus de 56 avis clients</p>
       </div>
     </div>
 
@@ -88,28 +89,12 @@
       Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
       eveniet,
       repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
-
-
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
-      molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
-      Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
-      quibusdam
-      hic laboriosam explicabo doloribus provident veniam sint velit voluptas ab sunt dolores cupiditate, recusandae
-      id
-      quos.
-      Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
-      perferendis
-      consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
-      Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo aspernatur
-      soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
-      Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
-      eveniet,
-      repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
     </p>
 
-    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g elit. </h6>
-    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g elit. Corrupti quod consequuntur placeat, iusto, </h6>
-  
+    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g
+      elit. </h6>
+    <h6>Lorem ipsum dolor sit, amet consectetur adipisicinnecessitatibus aliquid corporis recusandae dignissimos, g
+      elit. Corrupti quod consequuntur placeat, iusto, </h6>
   </main>
 
   <footer class="footer">
