integration et amelioration

--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -16,6 +16,12 @@
 
   <!--Header-->
   <header class="head">
+    <div class="head-top">
+      <p>Livraison offerte à partir de 65€ d'achat !</p>
+    </div>
+    <div class="flex-right">
+      <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
+    </div>
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
@@ -98,7 +104,7 @@
           </p>
           <h5>A partir de </h5>
           <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+          <button class="btn-color">VOIR CE PRODUIT</button>
         </div>
         <div>
           <h1>Notre nouveauté</h1>
@@ -112,7 +118,7 @@
           </p>
           <h5>A partir de </h5>
           <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+          <button class="btn-color">VOIR CE PRODUIT</button>
         </div>
         <div>
           <h1>Notre nouveauté</h1>
@@ -126,7 +132,7 @@
           </p>
           <h5>A partir de </h5>
           <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+          <button class="btn-color">VOIR CE PRODUIT</button>
         </div>
       </div>
 
