--- a/The/the.html
+++ b/The/the.html
@@ -16,6 +16,12 @@
 
   <!--Header-->
   <header class="head">
+    <div class="head-top">
+      <p>Livraison offerte à partir de 65€ d'achat !</p>
+    </div>
+    <div class="flex-right">
+      <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
+    </div>
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
@@ -37,228 +43,208 @@
   </header>
   <main class="container">
     <section class="container-element">
-      <div class="element-flex">
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+      <div class="img-el-top">
+        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <h1>Thé noir</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
+          dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
+          voluptatum.
+        </p>
+        <div class="element-flex">
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
         </div>
       </div>
 
-      <div class="element-flex">
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+      <div class="img-el-top">
+        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <h1>Thé noir</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
+          dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
+          voluptatum.
+        </p>
+        <div class="element-flex">
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
         </div>
       </div>
 
-      <div class="element-flex">
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+      <div class="img-el-top">
+        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <h1>Thé noir</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
+          dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
+          voluptatum.
+        </p>
+        <div class="element-flex">
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
         </div>
       </div>
 
-      <div class="element-flex">
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+      <div class="img-el-top">
+        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <h1>Thé noir</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
+          dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
+          voluptatum.
+        </p>
+        <div class="element-flex">
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
         </div>
       </div>
 
-      <div class="element-flex">
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
-        </div>
-        <div>
-          <h1>Notre nouveauté</h1>
-          <a href="#">
-            <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
-          </a>
-          <h3>Thé de hammam</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-            expedita exercitationem ut iste assumenda in blanditiis
-            sit nisi, perferendis suscipit hic,
-          </p>
-          <h5>A partir de </h5>
-          <h4>8.50€</h4>
-          <button>VOIR CE PRODUIT</button>
+      <div class="img-el-top">
+        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <h1>Thé noir</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
+          dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
+          voluptatum.
+        </p>
+        <div class="element-flex">
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
+          <div>
+            <h1>Notre nouveauté</h1>
+            <a href="#">
+              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+            </a>
+            <h3>Thé de hammam</h3>
+            <h5>A partir de </h5>
+            <h4>8.50€</h4>
+            <button class="btn-color">VOIR CE PRODUIT</button>
+          </div>
         </div>
       </div>
     </section>
