--- a/Acceuil/index.html
+++ b/Acceuil/index.html
@@ -16,6 +16,12 @@
 
   <!--Header-->
   <header class="head">
+    <div class="head-top">
+      <p>Livraison offerte à partir de 65€ d'achat !</p>
+    </div>
+    <div class="flex-right">
+      <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
+    </div>
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
@@ -81,6 +87,13 @@
           quos.
           Corporis, totam nam quos odio at distinctio quis ad nihil voluptatum sit repellendus, suscipit non. In
           perferendis
+          consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
+          Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
+          aspernatur
+          soluta minima voluptatum iure iste voluptates fugit dicta! Error quam quidem asperiores?
+          Labore nihil distinctio nesciunt temporibus amet dolorum minima id natus quasi soluta, odio animi sunt, a
+          eveniet,
+          repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
           consequuntur explicabo quod est dolores eos, delectus esse reiciendis et pariatur veniam. Obcaecati?
           Doloribus ut ratione eaque nesciunt porro a est id ex sapiente, tenetur et magnam quis dolorem, illo
           aspernatur
