organisaion des pages

--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -25,16 +25,19 @@
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
-          <img src="../img/logo.png" alt="">
+          <a href="../index.html">
+            <img src="../img/logo.png" alt="">
+          </a>
         </div>
         <div class="head-price">
-          <p>Mon panier "£" 42.00€</p>
+          <p>Mon panier <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            42.00€</p>
         </div>
       </div>
       <nav class="nav-links">
-        <div><a href="">thés</a></div>
-        <div><a href="">grands crus</a></div>
-        <div><a href="">accessoires</a></div>
+        <div><a href="../The/the.html">thés</a></div>
+        <div><a href="../GrandCrus/grandcrus.html">grands crus</a></div>
+        <div><a href="#">accessoires</a></div>
         <div><a href="">epicerie</a></div>
         <div><a href="">notre histoire</a></div>
       </nav>
