--- a/The/the.html
+++ b/The/the.html
@@ -25,16 +25,20 @@
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
-          <img src="../img/logo.png" alt="">
+          <a href="../index.html">
+            <img src="../img/logo.png" alt="">
+          </a>
+          
         </div>
         <div class="head-price">
-          <p>Mon panier "£" 42.00€</p>
+          <p>Mon panier <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            42.00€</p>
         </div>
       </div>
       <nav class="nav-links">
-        <div><a href="">thés</a></div>
-        <div><a href="">grands crus</a></div>
-        <div><a href="">accessoires</a></div>
+        <div><a href="#">thés</a></div>
+        <div><a href="../GrandCrus/grandcrus.html">grands crus</a></div>
+        <div><a href="../Accessoir/accessoir.html">accessoires</a></div>
         <div><a href="">epicerie</a></div>
         <div><a href="">notre histoire</a></div>
       </nav>
@@ -85,7 +89,7 @@
       </div>
 
       <div class="img-el-top">
-        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <img class="img-el-left" src="../img/tea/2.jpg" width="100%" alt="">
         <h1>Thé noir</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
           dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
@@ -95,7 +99,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product8_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -105,7 +109,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product10_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -115,7 +119,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product11_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -126,7 +130,7 @@
       </div>
 
       <div class="img-el-top">
-        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <img class="img-el-left" src="../img/tea/3.jpg" width="100%" alt="">
         <h1>Thé noir</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
           dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
@@ -136,7 +140,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product12_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -146,7 +150,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product13_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -156,7 +160,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product15_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -167,7 +171,7 @@
       </div>
 
       <div class="img-el-top">
-        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <img class="img-el-left" src="../img/tea/4.jpg" width="100%" alt="">
         <h1>Thé noir</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
           dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
@@ -177,7 +181,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product5_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -187,7 +191,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product7_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -197,7 +201,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product3_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -208,7 +212,7 @@
       </div>
 
       <div class="img-el-top">
-        <img class="img-el-left" src="../img/tea/1.jpg" width="100%" alt="">
+        <img class="img-el-left" src="../img/tea/4.jpg" width="100%" alt="">
         <h1>Thé noir</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi nam iusto harum corrupti laboriosam
           dolores. Blanditiis impedit quis ea sit assumenda fuga, soluta temporibus, nisi ipsa natus ratione quidem
@@ -218,7 +222,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product6_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -228,7 +232,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product14_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
@@ -238,7 +242,7 @@
           <div>
             <h1>Notre nouveauté</h1>
             <a href="#">
-              <img src="../img/product/product16_big.jpg" width="100%" alt="Tasse de rooibos" />
+              <img src="../img/product/product9_big.jpg" width="100%" alt="Tasse de rooibos" />
             </a>
             <h3>Thé de hammam</h3>
             <h5>A partir de </h5>
