--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -9,6 +9,8 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="accessoir.css">
+  <link rel="stylesheet" media="screen and (max-width:992px)" href="accessoir-table.css">
+  <link rel="stylesheet" media="screen and (max-width:992px)" href="accessoir-mobile.css">
   <title>Cup of Tea</title>
 </head>
 
