--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" media="screen and (max-width:992px)"  href="style-table.css">
+  <link rel="stylesheet" media="screen and (max-width:680px)"  href="style-mobile.css">
   <title>Cup of Tea</title>
 </head>
 
@@ -20,13 +22,13 @@
       <p>Livraison offerte à partir de 65€ d'achat !</p>
     </div>
     <div class="flex-right">
-      <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
+      <div> <img src="./img/ribbon.svg" width="100%" alt=""> </div>
     </div>
     <div class="container">
       <div class="head-title">
         <div class="head-logo" width="100%">
           <a href="index.html">
-            <img src="../img/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
           </a>
         </div>
         <div class="head-price">
@@ -49,7 +51,7 @@
       <section class="equipe">
         <h1>Notre équipe</h1>
         <h3>Amélie, fondatrice de Cup of Tea</h3>
-        <img src="../img/amelie.jpg" class="img1" alt="">
+        <img src="./img/amelie.jpg" class="img1" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
           molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
           Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
@@ -80,7 +82,7 @@
           repellendus quas iure sapiente aspernatur earum vel! Adipisci eligendi molestias enim nulla libero!
         </p>
         <h3>Xavier, fondateur de Cup of Tea</h3>
-        <img src="../img/xavier.jpg" class="img2" alt="">
+        <img src="./img/xavier.jpg" class="img2" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio earum aperiam nisi id totam repellat ad nobis
           molestias libero numquam asperiores, a dignissimos temporibus cupiditate quod. Cumque itaque quas blanditiis.
           Minima delectus distinctio voluptates ex nobis! Nulla sequi asperiores dolor, reprehenderit aperiam quas
@@ -128,7 +130,7 @@
         </p>
         <div class="flex-concept">
           <div>
-            <img src="../img/concept/1.svg" alt="">
+            <img src="./img/concept/1.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
@@ -136,7 +138,7 @@
             </p>
           </div>
           <div>
-            <img src="../img/concept/2.svg" alt="">
+            <img src="./img/concept/2.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
@@ -144,7 +146,7 @@
             </p>
           </div>
           <div>
-            <img src="../img/concept/3.svg" alt="">
+            <img src="./img/concept/3.svg" alt="">
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, molestias. Quia rerum enim error beatae
               debitis iusto. Temporibus maxime aspernatur dolor aliquid
