--- a/The/the.html
+++ b/The/the.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="the.css">
+  <link rel="stylesheet" href="the.css"> 
+  <link rel="stylesheet" media="screen and (max-width:992px)"  href="the-table.css"> 
+  <link rel="stylesheet" media="screen and (max-width:680px)"  href="the-mobile.css"> 
   <title>Cup of Tea</title>
 </head>
 
