--- a/GrandCrus/grandcrus.html
+++ b/GrandCrus/grandcrus.html
@@ -71,7 +71,7 @@
         <div>
           <input type="number" placeholder="Pochette de 100gr">
           <h1>9,00€</h1>
-          <button>AJOUTER AU PANIER</button>
+          <button class="btn-color" >AJOUTER AU PANIER</button>
           <br><br>
           <i class="fa fa-coffee" aria-hidden="true">
             <p>Ajouter à ma liste d'envie</p>
